[ADD] Перевод основных страниц и вьюкомпонентов

--- a/src/FlexTemplate/Views/Home/Blogs.cshtml
+++ b/src/FlexTemplate/Views/Home/Blogs.cshtml
@@ -6,7 +6,7 @@
 
         <div class="container">
 
-            <h1>Blog</h1>
+            <h1>Блог</h1>
 
         </div>
 
@@ -16,8 +16,8 @@
 
         <div class="breadcrumb-wrapper">
             <ol class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li class="active">Blog</li>
+                <li><a href="#">Головна</a></li>
+                <li class="active">Блог</li>
             </ol>
         </div>
 
