--- a/src/FlexTemplate/Views/Home/Components/SearchSlider/LeftWide.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/SearchSlider/LeftWide.cshtml
@@ -14,9 +14,9 @@
                         <div class="col-xs-12 col-sm-9 col-md-7">
 
                             <div class="slick-hero-slider-caption">
-                                <h2 class="animation fromBottom transitionDelay2 transitionDuration4 text-left">Hero Banner Slider By Slick <span class="block"><span class="bg-primary">Slider Caption # One</span></span></h2>
-                                <p class="animation fromBottom transitionDelay4 transitionDuration6 text-left">Yet joy exquisite put sometimes enjoyment perpetual now. Behind lovers eat having length horses vanity say had its.</p>
-                                <a href="#" class="animation fromBottom transitionDelay6 transitionDuration8 text-left"><span class="">More Details</span></a>
+                                <h2 class="animation fromBottom transitionDelay2 transitionDuration4">Заголовок до слайду<span class="block"><span class="bg-primary">Слайд 1</span></span></h2>
+                                <p class="animation fromBottom transitionDelay4 transitionDuration6">Опис до слайду</p>
+                                <a href="#" class="animation fromBottom transitionDelay6 transitionDuration8"><span class="">Детальніше</span></a>
                             </div>
 
                         </div>
@@ -39,9 +39,9 @@
                         <div class="col-xs-12 col-sm-9 col-md-7">
 
                             <div class="slick-hero-slider-caption">
-                                <h2 class="animation fromBottom transitionDelay2 transitionDuration4 text-left">Hero Banner Slider By Slick <span class="block"><span class="bg-primary">Slider Caption # Two</span></span></h2>
-                                <p class="animation fromBottom transitionDelay4 transitionDuration6 text-left">Yet joy exquisite put sometimes enjoyment perpetual now. Behind lovers eat having length horses vanity say had its.</p>
-                                <a href="#" class="animation fromBottom transitionDelay6 transitionDuration8 text-left"><span class="">More Details</span></a>
+                                <h2 class="animation fromBottom transitionDelay2 transitionDuration4">Заголовок до слайду<span class="block"><span class="bg-primary">Слайд 2</span></span></h2>
+                                <p class="animation fromBottom transitionDelay4 transitionDuration6">Опис до слайду</p>
+                                <a href="#" class="animation fromBottom transitionDelay6 transitionDuration8"><span class="">Детальніше</span></a>
                             </div>
 
                         </div>
@@ -63,9 +63,9 @@
                         <div class="col-xs-12 col-sm-9 col-md-7">
 
                             <div class="slick-hero-slider-caption">
-                                <h2 class="animation fromBottom transitionDelay2 transitionDuration4 text-left">Hero Banner Slider By Slick <span class="block"><span class="bg-primary">Slider Caption # Three</span></span></h2>
-                                <p class="animation fromBottom transitionDelay4 transitionDuration6 text-left">Yet joy exquisite put sometimes enjoyment perpetual now. Behind lovers eat having length horses vanity say had its.</p>
-                                <a href="#" class="animation fromBottom transitionDelay6 transitionDuration8 text-left"><span class="">More Details</span></a>
+                                <h2 class="animation fromBottom transitionDelay2 transitionDuration4">Заголовок до слайду<span class="block"><span class="bg-primary">Слайд 3</span></span></h2>
+                                <p class="animation fromBottom transitionDelay4 transitionDuration6">Опис до слайду</p>
+                                <a href="#" class="animation fromBottom transitionDelay6 transitionDuration8"><span class="">Детальніше</span></a>
                             </div>
 
                         </div>
@@ -84,24 +84,24 @@
         <form>
 
             <div class="form-group location-form">
-                <input type="text" class="form-control" placeholder="Where would you like to eat?">
+                <input type="text" class="form-control" placeholder="Де б ви хотіли поїсти?">
             </div>
 
             <div class="form-group">
                 <select class="custom-select" id="cuisine-type">
-                    <option value="0">Cuisine Type</option>
-                    <option value="1">African</option>
-                    <option value="2">American‎</option>
-                    <option value="3">Italian</option>
-                    <option value="4">French</option>
-                    <option value="5">Indochinese‎</option>
-                    <option value="6">Halal</option>
+                    <option value="0">Тип кухні</option>
+                    <option value="1">Африканська</option>
+                    <option value="2">Американська‎</option>
+                    <option value="3">Італійська</option>
+                    <option value="4">Француська</option>
+                    <option value="5">Індокитайська‎</option>
+                    <option value="6">Халяль</option>
                 </select>
             </div>
 
             <div class="form-group">
                 <select class="custom-select" id="no-of-people">
-                    <option value="0">Number Of People</option>
+                    <option value="0">Кількість людей</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -111,13 +111,13 @@
                 </select>
             </div>
 
-            <button class="btn btn-primary btn-form">Find a Table</button>
+            <button class="btn btn-primary btn-form">Знайти стіл</button>
 
         </form>
 
         <div class="clear"></div>
 
-        <p class="around-you"><a href="#">Or view all 360 restaurants in and/or around your current city</a></p>
+        <p class="around-you"><a href="#">Або переглянути всі 360 ресторанів навколо вашого поточного міста</a></p>
 
     </div>
 
