--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceHeader/Default.cshtml
@@ -30,7 +30,7 @@
                             <div class="text-right text-left-xs">
                                 <a href="#" class="fav-like"><i class="fa fa-heart"></i></a>
                                 <div class="btn-holder mt-5">
-                                    <a href="#detail-content-sticky-nav-01" class="btn btn-primary anchor-alt">See Menu Lists</a>
+                                    <a href="#detail-content-sticky-nav-01" class="btn btn-primary anchor-alt">Переглянути меню</a>
                                 </div>
                             </div>
                         </div>
