--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceLocation/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceLocation/Default.cshtml
@@ -12,7 +12,7 @@
             <div id="infobox">
                 <div class="infobox-inner">
 
-                    <div class="font500 font12">We Are Here</div>
+                    <div class="font500 font12">Ми Тут</div>
 
                 </div>
 
