--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceMenu/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceMenu/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿<div id="detail-content-sticky-nav-01" class="detail-content-section clearfix">
 
     <div class="section-title-02">
-        <h3><span>Menu</span></h3>
+        <h3><span>Меню</span></h3>
     </div>
 
     <div class="panel-group bootstarp-accordion pb-0 mt-0 pb-0 mb-0" id="accordion" role="tablist" aria-multiselectable="true">
@@ -9,7 +9,7 @@
         <div class="panel">
             <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Breakfase</a>
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Сніданок</a>
                 </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
@@ -32,8 +32,8 @@
 
                                         <div class="content">
 
-                                            <h6><span>Beef Rissoles</span></h6>
-                                            <p>Fat new smallness few supposing suspicion. Own neglected you preferred way sincerity.</p>
+                                            <h6><span>Яловичі котлети</span></h6>
+                                            <p>Опис страви.</p>
 
                                             <div class="price">
                                                 $6.43
@@ -55,8 +55,8 @@
 
                                         <div class="content">
 
-                                            <h6><span>Golden Roast Potatoes</span></h6>
-                                            <p>Own neglected you preferred way sincerity delivered. Message cottage windows do besides.</p>
+                                            <h6><span>Золота смажена картопля</span></h6>
+                                            <p>Опис страви.</p>
 
                                             <div class="price">
                                                 $11.54
@@ -78,8 +78,8 @@
 
                                         <div class="content">
 
-                                            <h6><span>Bacon and Beef Pasta Bake</span></h6>
-                                            <p>Meant to learn of vexed if style allow he there. Tiled man stand tears ten joy there terms any widen.</p>
+                                            <h6><span>Бекон і яловичини паста</span></h6>
+                                            <p>Опис страви.</p>
 
                                             <div class="price">
                                                 $8.98
@@ -101,8 +101,8 @@
 
                                         <div class="content">
 
-                                            <h6><span>Satay Chicken or Beef </span></h6>
-                                            <p>Fat new smallness few supposing suspicion. Own neglected you preferred way sincerity</p>
+                                            <h6><span>Стейк курячий або яловичий</span></h6>
+                                            <p>Опис страви.</p>
 
                                             <div class="price">
                                                 $6.43
@@ -124,8 +124,8 @@
 
                                         <div class="content">
 
-                                            <h6><span>Dutch Indonesian Chicken</span></h6>
-                                            <p>Own neglected you preferred way sincerity delivered. Message cottage windows do besides against uncivil.</p>
+                                            <h6><span>Голландська індонезійська курка</span></h6>
+                                            <p>Опис страви.</p>
 
                                             <div class="price">
                                                 $11.54
@@ -147,8 +147,8 @@
 
                                         <div class="content">
 
-                                            <h6><span>Creamy Pasta Carbonara</span></h6>
-                                            <p>Meant to learn of vexed if style allow he there. Tiled man stand tears ten joy there terms any widen.</p>
+                                            <h6><span>Вершкова паста карбонара</span></h6>
+                                            <p>Опис страви.</p>
 
                                             <div class="price">
                                                 $8.98
