--- a/src/FlexTemplate/Views/Home/Components/ThisPlacePhoto/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacePhoto/Default.cshtml
@@ -13,6 +13,6 @@
 <form method="post" asp-action="Upload" asp-controller="Home" enctype="multipart/form-data">
     <div id="file-submit" class="dropzone">
         <input type="file">
-        <div class="dz-default dz-message"><span>Загрузити ще..</span></div>
+        <div class="dz-default dz-message"><span>Завантажити ще..</span></div>
     </div>
 </form>
