--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceReview/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceReview/Default.cshtml
@@ -33,7 +33,7 @@
                 </div>
             </div>
 
-            reviewed on Jan 16, 2016
+            розглянуті на Jan 16, 2016
 
         </div>
 
