--- a/src/FlexTemplate/Views/Home/Components/YouMayAlsoLike/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/YouMayAlsoLike/Default.cshtml
@@ -4,7 +4,7 @@
 
         <div class="section-title-02">
 
-            <h3><span>You may also like:</span></h3>
+            <h3><span>Вам також може сподобатися:</span></h3>
 
         </div>
 
@@ -29,9 +29,9 @@
                             <div class="rating-item">
                                 <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
                             </div>
-                            <span class="texting"> (27 reviews)</span>
+                            <span class="texting"> (27 відгуків)</span>
                         </div>
-                        <p class="cuisine">Cuisine: <span>Italian</span> <span>Seafood</span> <span>Bistro</span></p>
+                        <p class="cuisine">Кухня: <span>Iталійська</span> <span>Морепродукти</span> <span>Бістро</span></p>
                     </div>
                 </a>
             </div>
@@ -50,9 +50,9 @@
                             <div class="rating-item">
                                 <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
                             </div>
-                            <span class="texting"> (27 reviews)</span>
+                            <span class="texting"> (27 відгуків)</span>
                         </div>
-                        <p class="cuisine">Cuisine: <span>Western</span> <span>French</span></p>
+                        <p class="cuisine">Кухня: <span>Iталійська</span> <span>Морепродукти</span> <span>Бістро</span></p>
                     </div>
                 </a>
             </div>
@@ -71,9 +71,9 @@
                             <div class="rating-item">
                                 <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
                             </div>
-                            <span class="texting"> (27 reviews)</span>
+                            <span class="texting"> (27 відгуків)</span>
                         </div>
-                        <p class="cuisine">Cuisine: <span>Italian</span> <span>Seafood</span> <span>Bistro</span></p>
+                        <p class="cuisine">Кухня: <span>Iталійська</span> <span>Морепродукти</span> <span>Бістро</span></p>
                     </div>
                 </a>
             </div>
@@ -92,9 +92,9 @@
                             <div class="rating-item">
                                 <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
                             </div>
-                            <span class="texting"> (27 reviews)</span>
+                            <span class="texting"> (27 відгуків)</span>
                         </div>
-                        <p class="cuisine">Cuisine: <span>Italian</span> <span>Seafood</span> <span>Bistro</span></p>
+                        <p class="cuisine">Кухня: <span>Iталійська</span> <span>Морепродукти</span> <span>Бістро</span></p>
                     </div>
                 </a>
             </div>
