--- a/src/FlexTemplate/Views/Home/Place.cshtml
+++ b/src/FlexTemplate/Views/Home/Place.cshtml
@@ -31,19 +31,19 @@
 
                                 <ul id="top-menu" class="multiple-sticky-nav clearfix">
                                     <li>
-                                        <a href="#detail-content-sticky-nav-00">Overview</a>
+                                        <a href="#detail-content-sticky-nav-00">Огляд</a>
                                     </li>
                                     <li>
-                                        <a href="#detail-content-sticky-nav-01">Menu</a>
+                                        <a href="#detail-content-sticky-nav-01">Меню</a>
                                     </li>
                                     <li>
-                                        <a href="#detail-content-sticky-nav-02">Review</a>
+                                        <a href="#detail-content-sticky-nav-02">Огляд</a>
                                     </li>
                                     <li>
-                                        <a href="#detail-content-sticky-nav-03">Photo</a>
+                                        <a href="#detail-content-sticky-nav-03">Фото</a>
                                     </li>
                                     <li>
-                                        <a href="#detail-content-sticky-nav-04">Location</a>
+                                        <a href="#detail-content-sticky-nav-04">Місцезнаходження</a>
                                     </li>
                                 </ul>
 
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="multiple-sticky">
-                    <div class="hidden">is used to stop multi-sticky</div>
+                    <div class="hidden">використовуються для зупинки кількох</div>
                 </div>
 
             </div>
@@ -79,10 +79,10 @@
 
                     <div class="deal-sm-inner">
 
-                        <h5>Deals &amp; Offers</h5>
-                        <p class="texting text-primary">30% of Total Bill</p>
+                        <h5>Пропозиції &amp;</h5>
+                        <p class="texting text-primary">30% від загальної суми рахунків</p>
 
-                        <p class="text-underline mb-5">Terms and Conditions</p>
+                        <p class="text-underline mb-5">Правила та умови</p>
                         <ul>
                             <li>Necessary up knowledge it tolerably.</li>
                             <li>Unwilling departure education is be dashwoods.</li>
@@ -151,7 +151,7 @@
                                     </div>
 
                                     <div class="text-center">
-                                        <button class="btn btn-primary btn-block">Reserve now</button>
+                                        <button class="btn btn-primary btn-block">Забронювати зараз</button>
                                     </div>
 
                                 </div>
@@ -171,10 +171,10 @@
                     </div>
 
                     <div class="content">
-                        <h5>Call for reservation</h5>
-                        <p>Every day except Sunday from 10am to 8 pm</p>
+                        <h5>Телефонуйте для бронювання</h5>
+                        <p>Кожен день, крім неділі, з 10 ранку до 8 вечора</p>
                         <p class="phone-number">
-                            <span class="font-italic text-muted">Reservation number: </span>
+                            <span class="font-italic text-muted">Номер резерва: </span>
                             <span class="number">+66-85-658-8754</span>
                         </p>
                     </div>
