--- a/src/FlexTemplate/Views/Home/Places.cshtml
+++ b/src/FlexTemplate/Views/Home/Places.cshtml
@@ -12,7 +12,7 @@
                         <input name="input" type="text" class="form-control" placeholder="@Model.Input">
                     </div>
 
-                    <button class="btn btn-primary btn-form">Find a Table</button>
+                    <button class="btn btn-primary btn-form">Знайти стiл</button>
 
                 </div>
 
@@ -25,8 +25,8 @@
 
             <div class="breadcrumb-wrapper">
                 <ol class="breadcrumb">
-                    <li><a href="@Url.Action("Index", "Home")">Home</a></li>
-                    <li><a href="@Url.Action("Places", "Home")" class="active">Places</a></li>
+                    <li><a href="@Url.Action("Index", "Home")">Головна</a></li>
+                    <li><a href="@Url.Action("Places", "Home")" class="active">Ресторани</a></li>
                 </ol>
             </div>
 
