--- a/src/FlexTemplate/Views/Shared/Components/Header/Transparent.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Transparent.cshtml
@@ -103,13 +103,13 @@
                     <ul class="clearfix">
                         <li class="dropdown bt-dropdown-click">
                             <a id="currency-dropdown" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                <i class="ion-social-usd"></i> Dollar
+                                <i class="ion-social-usd"></i> Долари
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="currency-dropdown">
-                                <li><a href="#"><i class="ion-social-usd"></i> Dollar</a></li>
-                                <li><a href="#"><i class="ion-social-euro"></i> Europe</a></li>
-                                <li><a href="#"><i class="ion-social-yen"></i> Yen</a></li>
+                                <li><a href="#"><i class="ion-social-usd"></i> Долари</a></li>
+                                <li><a href="#"><i class="ion-social-euro"></i> Євро</a></li>
+                                <li><a href="#"><i class="ion-social-yen"></i> Iєна</a></li>
                             </ul>
                         </li>
                         <li class="dropdown bt-dropdown-click">
@@ -125,7 +125,7 @@
                             </ul>
                         </li>
                         <li class="user-action">
-                            <a href="javascript:void(0)" class="btn btn-primary btn-inverse btn-sm btn-ajax-login" data-toggle="modal">Sign up/in</a>
+                            <a href="javascript:void(0)" class="btn btn-primary btn-inverse btn-sm btn-ajax-login" data-toggle="modal">Зареєструватися/Увійти</a>
                         </li>
                     </ul>
                 </div>
