--- a/src/FlexTemplate/Views/Home/Components/Capabilities/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Capabilities/Default.cshtml
@@ -7,7 +7,7 @@
             <div class="icon text-primary">
               <i class="ti-location-pin"></i>
             </div>
-            <h5>find what you want</h5> Choose from over 10,000+ restaurants, with reliable reviews
+            <h5>знайти те, що ви хочете</h5> Виберіть один з більш ніж 10000 ресторанів, з надійними відгуками
           </div>
         </div>
         <div class="GridLex-col-3_sm-3_xs-6_xss-12">
@@ -15,7 +15,7 @@
             <div class="icon text-primary">
               <i class="ti-timer"></i>
             </div>
-            <h5>the restaurant is full?</h5> Book online for free, you don't need to call the restaurant
+            <h5>ресторан повний?</h5> Забронюйте онлайн безкоштовно, вам не потрібно телефонувати в ресторан
           </div>
         </div>
         <div class="GridLex-col-3_sm-3_xs-6_xss-12">
@@ -23,7 +23,7 @@
             <div class="icon text-primary">
               <i class="ti-comments-smiley"></i>
             </div>
-            <h5>ask for the bill with a smile</h5> Enjoy up to 50% off the bill in participating restaurants
+            <h5>попросити рахунок з посмішкою</h5> Отримуйте до 50% від рахунку в ресторанах, що беруть участь
           </div>
         </div>
         <div class="GridLex-col-3_sm-3_xs-6_xss-12">
@@ -31,7 +31,7 @@
             <div class="icon text-primary">
               <i class="ti-tag"></i>
             </div>
-            <h5>thefork picks up the tab</h5> Earn Yums for each booking, and get a loyalty discount
+            <h5>відзначити заклад</h5> Заробити бали для кожного замовлення, а також отримати знижку лояльності
           </div>
         </div>
       </div>
