--- a/src/FlexTemplate/Views/Home/Components/Search/CenterShort.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/CenterShort.cshtml
@@ -17,7 +17,7 @@
                     <form asp-action="Places" name="FormPalces">
 
                         <div class="form-group location-form">
-                            <input name="input" type="text" class="form-control" placeholder="Where would you like to eat?">
+                            <input name="input" type="text" class="form-control" placeholder="Де б ви хотіли поїсти?">
                         </div>
 
                         <div class="form-group">
