--- a/src/FlexTemplate/Views/Home/Components/Search/LeftShort.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftShort.cshtml
@@ -13,7 +13,7 @@
             <form asp-action="Places" name="FormPalces">
 
                 <div class="form-group location-form">
-                    <input type="input" class="form-control" placeholder="Where would you like to eat?">
+                    <input type="input" class="form-control" placeholder="Де б ви хотіли поїсти?">
                 </div>
 
                 <div class="form-group">
