--- a/src/FlexTemplate/Views/Home/Components/Suggestions/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Suggestions/Default.cshtml
@@ -6,7 +6,7 @@
           <div class="featured-image" style="background-image:url('images/featured-image/01.jpg');">
             <div class="content">
               <a href="#" class="block">
-                <h3 class="text-primary font300 mb-10">Browse our Restaurant Blog</h3> Explore news, reviews & recommendations!
+                <h3 class="text-primary font300 mb-10">Перегляньте наш ресторан блог</h3> Дослідити новини, огляди та рекомендації!
               </a>
             </div>
           </div>
@@ -15,7 +15,7 @@
           <div class="featured-image" style="background-image:url('images/featured-image/02.jpg');">
             <div class="content">
               <a href="#" class="block">
-                <h3 class="text-primary font300 mb-10">For Restaurant Owners</h3> Join our vibrant restaurant marketplace!
+                <h3 class="text-primary font300 mb-10">Для власників ресторанів</h3> Приєднуйтесь до нашого живого ресторанного ринку!
               </a>
             </div>
           </div>
