--- a/src/FlexTemplate/Views/Home/Components/ThisPlaceReviews/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlaceReviews/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿<div id="detail-content-sticky-nav-02" class="detail-content-section clearfix">
 
     <div class="section-title-02">
-        <h3><span>Review</span></h3>
+        <h3><span>Огляд</span></h3>
     </div>
 
     <div class="review-wrapper">
