--- a/src/FlexTemplate/Views/Home/Login.cshtml
+++ b/src/FlexTemplate/Views/Home/Login.cshtml
@@ -7,6 +7,6 @@
         @Html.EditorForModel()
     </div>
     <div>
-        <input type="submit" value="Войти"/>
+        <input type="submit" value="Увійти"/>
     </div>
 }
