--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -3,8 +3,8 @@
   <!-- start hero-header -->
   <div class="hero hero-breadcrumb" style="background-image:url('../../images/hero-header/03.jpg');">
     <div class="container">
-      <h1>Add your restuarant</h1>
-      <p>Get more eater &amp; Drinker</p>
+      <h1>Додати ресторан</h1>
+      <p>Отримати більше &amp;</p>
     </div>
   </div>
     <form method="post" asp-controller="Home" asp-action="NewPlace" enctype="multipart/form-data">
@@ -12,23 +12,23 @@
         <div class="container pt-10 pb-30">
             <div class="breadcrumb-wrapper">
                 <ol class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li class="active">Add your restuarant</li>
+                    <li><a href="#">Головна</a></li>
+                    <li class="active">Додати ресторан</li>
                 </ol>
             </div>
             <div class="row mt-40 mb-30">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
                     <div class="notify-box">
                         <div class="notify-inner">
-                            <p> If you don’t have an account you can create one below by entering your email address/username. Your account details will be confirmed via email.</p>
-                            <a href="#" class="btn btn-primary btn-sm btn-absolute">Sign-up</a>
+                            <p> Якщо у вас немає аккаунту ви можете створити новий, ввівши свою електронну адресу/ім'я користувача. Дані аккаунту будуть підтверджені по електронній пошті.</p>
+                            <a href="#" class="btn btn-primary btn-sm btn-absolute">Вхід</a>
                         </div>
                     </div>
                     <div class="submite-list-wrapper">
                         <div class="row">
                             <div class="col-md-8">
                                 <div class="section-title-02 mb-20">
-                                    <h3><span>Background Information</span></h3>
+                                    <h3><span>Довідкова інформація</span></h3>
                                     <p>Get your projects to a new level. Included is animation on view, Parallax block, counters and charts, high resolution graphics etc.</p>
                                 </div>
                             </div>
@@ -37,14 +37,14 @@
                             <div class="row ga-20">
                                 <div class="col-xs-12 col-sm-12">
                                     <div class="form-group form-group-lg">
-                                        <label>Restuarant name:</label>
+                                        <label>Назва ресторану:</label>
                                         <input type="text" class="form-control" name="Name"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-12">
                                     <div class="form-group bootstrap3-wysihtml5-wrapper">
-                                        <label>Restuarant information:</label>
-                                        <textarea name="Description" class="bootstrap3-wysihtml5 form-control" placeholder="Enter text ..." style="height: 200px;"></textarea>
+                                        <label>Iнформація про ресторан:</label>
+                                        <textarea name="Description" class="bootstrap3-wysihtml5 form-control" placeholder="Введіть текст ..." style="height: 200px;"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -128,28 +128,28 @@
                                     </div>
                                 </div>
                             </div>
-                            <h6 class="text-primary text-uppercase mt-15">Map</h6>
+                            <h6 class="text-primary text-uppercase mt-15">Карта</h6>
                             <div id="map-simple" class="map-submit mb-40"></div>
                         </div>
                         <div class="row">
                             <div class="col-md-8">
                                 <div class="section-title-02 mb-20">
-                                    <h3><span>Photos</span></h3>
-                                    <p>Get your projects to a new level. Included is animation on view, Parallax block, counters and charts, high resolution graphics etc.</p>
+                                    <h3><span>Фотографії</span></h3>
+                                    <p>Підніміть свої проекти на якісно новий рівень.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="submite-list-box">
                             <div id="new-place" class="dropzone">
                                 <input name="files" type="file" multiple>
-                                <div class="dz-default dz-message"><span>Click or Drop Images Here</span></div>
+                                <div class="dz-default dz-message"><span>Натисніть або перетяніть сюди зображення</span></div>
                             </div>
                         </div>
                         <div class="checkbox-block font-icon-checkbox">
                             <input id="term_accept-1" name="TermAccept" type="checkbox" class="checkbox"/>
                             <label class="" for="term_accept-1">Am terminated it excellence invitation projection as. She graceful shy believed distance use nay. Lively is people so basket ladies window expect. <a href="#" class="font700">Terms &amp; Conditions</a></label>
                         </div>
-                        <input type="submit" class="btn btn-primary mt-15" value="Submit"/>
+                        <input type="submit" class="btn btn-primary mt-15" value="Відправити"/>
                     </div>
                 </div>
             </div>
