--- a/src/FlexTemplate/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Footer/Default.cshtml
@@ -14,7 +14,7 @@
               <img src="images/logo-white.png" alt="Image" />
             </a>
           </div>
-          <p class="about-us-footer">Abilities or he perfectly pretended so strangers be exquisite. Oh to another chamber pleased imagine do in. Went me rank at last loud shot an draw. Excellent so to no sincerity smallness... <a href="#" class="font-italic">read more</a></p>
+          <p class="about-us-footer">Опис сайту в деталях...<a href="#" class="font-italic">читати далі</a></p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-9">
           <div class="pl-wrapper">
@@ -23,15 +23,15 @@
                 <div class="newsletter-footer">
                   <form action="#" method="post" class="">
                     <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Enter your email to get our newsletter">
-                      <input type="submit" class="btn btn-submit" value="Subscribe">
+                      <input type="text" class="form-control" placeholder="Введіть адресу електронної пошти, щоб отримувати новини...">
+                      <input type="submit" class="btn btn-submit" value="Підписатися">
                     </div>
                   </form>
                 </div>
               </div>
               <div class="clear"></div>
               <div class="col-xss-12 col-xs-4 col-sm-4 col-md-4 mb-10-xss">
-                <h4 class="footer-title">Company</h4>
+                <h4 class="footer-title">Компанії</h4>
                 <ul class="menu-footer clearfix">
                   <li><a href="#">About</a></li>
                   <li><a href="#">Careers</a></li>
@@ -44,7 +44,7 @@
                 </ul>
               </div>
               <div class="col-xss-12 col-xs-4 col-sm-4 col-md-4 mb-10-xss">
-                <h4 class="footer-title">Discover</h4>
+                <h4 class="footer-title">Відкриття</h4>
                 <ul class="menu-footer clearfix">
                   <li><a href="#">About</a></li>
                   <li><a href="#">Careers</a></li>
@@ -57,7 +57,7 @@
                 </ul>
               </div>
               <div class="col-xss-12 col-xs-4 col-sm-4 col-md-4 mb-10-xss">
-                <h4 class="footer-title">Hosting</h4>
+                <h4 class="footer-title">Хостинг</h4>
                 <ul class="menu-footer clearfix">
                   <li><a href="#">About</a></li>
                   <li><a href="#">Careers</a></li>
@@ -77,7 +77,7 @@
   </footer>
   <footer class="secondary-footer">
     <div class="container">
-      <h6>Join Us On</h6>
+      <h6>Приєднуйтесь до нас на</h6>
       <ul class="social-footer clearfix">
         <li><a href="#"><i class="fa fa-facebook-official"></i></a></li>
         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -88,7 +88,7 @@
         <li><a href="#"><i class="fa fa-jsfiddle"></i></a></li>
         <li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
       </ul>
-      <p class="copy-right">&#169; Copyright 2016 crenoveative.con</p>
+      <p class="copy-right">&#169; Всі права захищені 2016 crenoveative.con</p>
     </div>
   </footer>
 </div>
