--- a/src/FlexTemplate/Views/Home/Places.cshtml
+++ b/src/FlexTemplate/Views/Home/Places.cshtml
@@ -12,7 +12,7 @@
                         <input name="input" type="text" class="form-control" placeholder="@Model.Input">
                     </div>
 
-                    <button class="btn btn-primary btn-form">Знайти стiл</button>
+                    <button class="btn btn-primary btn-form">Знайти</button>
 
                 </div>
 
